<resources>
    <string name="app_name">Brewer\'s Notepad</string>
    <string name="navigation_drawer_open">Open_drawer</string>
    <string name="navigation_drawer_close">close_Drawer</string>
    <string name="search_title">Search</string>
    <string name="create_recipe_title">Complete Recipe Creation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_recipe">CreateRecipeActivity</string>
    <string name="title_activity_view_recipe">ViewRecipeActivity</string>
    <string name="action_edit_recipe">Edit Recipe</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="recipe_title_label">Recipe Title:</string>
    <string name="recipe_type_label">Recipe Type:</string>
    <string name="mash_duration_label">Mash Duration:</string>
    <string name="mash_temp_label">Mash Temperature:</string>
    <string name="inputRecepieHint">Enter recipe title</string>
    <string name="mash_duration_hint">e.g. 60mins</string>
    <string name="mash_temp_hint">e.g. 56C</string>
    <string name="input_grainType_hint">Grain type</string>
    <string name="input_quantity_hint">Quantity</string>
    <string name="create_recipe_view_title">Create a new recipe</string>
    <string name="fermentation_phase_label">Fermentation Phase:</string>
    <string name="hop_phase_label">Hop Steeping Phase:</string>

    <string name="hop_phase_title">Hop Phase</string>
    <string name="input_hopVariety_hint">Hop Variety</string>
    <string name="input_hopType_hint">Hop type</string>
    <string name="input_hopAdd_hint">When?</string>
    <string name="hop_duration_label">Hop Phase Duration:</string>
    <string name="fermentPhaseName_hint">Phase Name</string>
    <string name="fermentPhaseDuration_hint">days</string>
    <string name="fermentPhaseTemp_hint">temp</string>
    <string name="fermentTimeFormat">%1$d Days</string>
    <string name="create_tabs_main">Main and Grain</string>
    <string name="create_tabs_second">Hops and Fermentation</string>
    <string name="create_tabs_third">Extras</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_draft_button_text">Save Draft</string>
    <string name="prompt_save_draft_title">Incomplete Recipe</string>
    <string name="delete_swipe_prompt_title">Delete Swiped Item</string>
    <string name="prompt_delete_content_text">You are about to delete \"%s\" recipe. Are you sure?</string>
    <string name="prompt_save_incomplete_recipe">You are about to save an incomplete recipe as draft. You can complete the recipe by editing it later.Are you sure?</string>
    <string name="metric_weight">kg</string>
    <string name="nonMetric_weight">lbs</string>
    <string name="celsius_prefix">°C</string>
    <string name="farenheight_prefix">°F</string>
    <string name="gram_prefix">g</string>
    <string name="ounce_prefix">oz</string>
    <string name="time_in_minutes">mins</string>
    <string name="view_grain_list_quantity_title">Quantity</string>
    <string name="view_grain_list_name_label">Grain Name</string>
    <string name="no_entry_hint">No Entry</string>
    <string name="time_in_days">days</string>
    <string-array name="recipe_types_list">
        <item>All Grain</item>
        <item>Partial Mash</item>
        <item>Extract</item>
        <item>Other</item>
    </string-array>
    <string name="interstitial_ad_id">ca-app-pub-1038077747487580/3263041952</string>
    <string name="hop_variety_contentDesc">Hop variety</string>
    <string name="hop_type_contentDesc">Hop type</string>
    <string name="hop_quantity_contentDesc">Quantity of hops</string>
    <string name="add_hop_contentDesc">when to add hops</string>
    <string name="grain_type_contentDesc">Grain type</string>
    <string name="grain_quantity_contentDesc">Quantity of grain</string>
    <string name="hop_phase_time_contentDesc">length of hopping phase in minutes</string>
    <string name="hop_phase_title_contentDesc">Hop phase title</string>
    <string name="fermentation_phase_title_contentDesc">Fermentation phase title</string>
    <string name="recipe_name_contentDesc">Recipe name</string>
    <string name="select_recipe_type_contentDesc">Select recipe type</string>
    <string name="mash_temp_contentDesc">Temperature of mash phase</string>
    <string name="mash_duration_contentDesc">Duration of mash phase</string>
    <string name="add_grain_contentDesc">Add new grain entry</string>
    <string name="add_new_hop_contentDesc">Add new hop entry</string>
    <string name="add_new_ferm_contentDesc">Add new fermentation phase</string>
    <string name="ferm_days_contentDesc">length of fermentation in days</string>
    <string name="ferm_temp_contentDesc">Target temperature of fermentation</string>
    <string name="ferm_list_contentDesc">List of fermentation entries</string>
    <string name="list_hop_contentDesc">List of hop entries</string>
    <string name="list_grain_contentDesc">List of grain entries</string>
    <string name="ferm_delete_contentDesc">Remove fermentation entry</string>
    <string name="remove_hop_contentDesc">Remove hop entry</string>
    <string name="remove_grain_contentDesc">Remove grain entry</string>
    <string name="add_new_recipe_contentDesc">Add new recipe</string>
    <string name="recipe_list_contentDesc">List of recipes</string>
    <string name="imperial_contentDesc">Use Imperial or metric values</string>
    <string name="celsius_btn_contentDesc">Fahrenheit of Celsius display temp</string>
    <string name="sign_out_google_contentDesc">Sign out from google</string>
    <string name="Toast_ferment_temp">Please type in \"Ferment temp\"!</string>
    <string name="Toast_ferment_time">Please type in \"Ferment time\"!</string>
    <string name="Toast_ferment_name">Please type in \"Ferment phase name\"!</string>
    <string name="Toast_invalid_num">Ferment temp is an invalid decimal number!</string>
    <string name="Toast_input_hop_variety">Please type in \"Hop variety\"!</string>
    <string name="Toast_input_hop_type">Please type in \"Hop type\"!</string>
    <string name="Tost_input_hop_quantity">Please type in \"The quantity of hops\"!</string>
    <string name="Toast_input_hop_time">Please type in \"When to add hops\"!</string>
    <string name="Toast_noRecipeName">Can\'t save recipe with no name!</string>
    <string name="Toast_input_grainType">Please type in \"Grain type\"!</string>
    <string name="Toast_input_grain_quantity">Please type in \"Quantity\"!</string>
    <string name="Toast_grain_quantity_invalid">Grain quantity is an invalid decimal number!</string>

    <string name="Toast_recipe_exists">Recipe name "%1$s" already exists!</string>
    <string name="widget_title">My Recipes</string>
    <string name="hop_table_variety_column">Variety</string>
    <string name="hop_table_type_column">Type</string>
    <string name="table_quantity_column">Quantity</string>
    <string name="hop_table_when_column">Add on</string>
    <string name="view_recipe_fermentation_title">Fermentation Phase</string>
    <string name="ferment_table_name_column">Phase name</string>
    <string name="table_duration_column">Duration</string>
    <string name="table_temp_column">Temperature</string>
    <string name="widget_textview_empty_text">Recipe Name</string>
    <string name="prompt_text_contentDesc">\"Prompt content\"</string>
    <string name="sign_in_button_contentDesc">Google Sign in button</string>
    <string name="profile_img_contentDesc">Google account profile image</string>
    <string name="grain_table_name_column">Grain name</string>
    <string name="view_title_mash_grains">Mash And Grains</string>
    <string name="view_title_recipe_metadata">Recipe Metadata</string>
</resources>
