<?xml version="1.0" encoding="utf-8"?>


<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/mashLayout"
    android:clickable="true"
    android:columnCount="5"
    android:rowCount="1">

    <TextView
        android:id="@+id/hop_list_variety_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/hop_variety_contentDesc"
        android:hint="@string/input_hopVariety_hint"
        android:inputType="textAutoComplete"
        android:maxWidth="90dp"
        android:minWidth="90dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hop_list_type_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/hop_type_contentDesc"
        android:hint="@string/input_hopType_hint"
        android:maxWidth="@dimen/editTextMedim"
        android:minWidth="@dimen/editTextMedim"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hop_list_when_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/add_hop_contentDesc"
        android:hint="@string/input_hopAdd_hint"
        android:maxWidth="60dp"
        android:minWidth="60dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/hop_list_quantity_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="start|center_vertical"
        android:layout_row="0"
        android:clickable="false"
        android:contentDescription="@string/hop_quantity_contentDesc"
        android:hint="@string/input_quantity_hint"
        android:maxWidth="60dp"
        android:minWidth="60dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/deleteGrainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:layout_gravity="center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/remove_hop_contentDesc"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete_white_36dp" />

</GridLayout>