<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/mashLayout"
    android:clickable="true"
    android:columnCount="4"
    android:rowCount="1">

    <TextView
        android:id="@+id/ferment_list_name_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/fermentation_phase_title_contentDesc"
        android:hint="@string/fermentPhaseName_hint"
        android:inputType="textAutoComplete"
        android:maxWidth="120dp"
        android:minWidth="120dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ferment_list_duration_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="start|center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/ferm_days_contentDesc"
        android:hint="@string/fermentPhaseDuration_hint"
        android:maxWidth="@dimen/editTextMedim"
        android:minWidth="@dimen/editTextMedim"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ferment_list_temp_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="start|center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/ferm_temp_contentDesc"
        android:hint="@string/fermentPhaseTemp_hint"
        android:maxWidth="@dimen/editTextMedim"
        android:minWidth="80dp"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/deleteGrainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:layout_gravity="center_vertical"
        android:layout_row="0"
        android:contentDescription="@string/ferm_delete_contentDesc"
        android:padding="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete_white_36dp" />

</GridLayout>