<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/mashLayout"
    android:layout_margin="@dimen/common_edge_margin"
    android:baselineAligned="true"
    android:clickable="true"

    android:orientation="horizontal"
    android:paddingEnd="@dimen/common_small_margin"
    android:paddingStart="@dimen/common_small_margin">

    <TextView
        android:id="@+id/ferment_list_name_entry"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:layout_row="0"
        android:layout_weight="1"
        android:contentDescription="@string/fermentation_phase_title_contentDesc"
        android:hint="@string/fermentPhaseName_hint"
        android:inputType="textAutoComplete"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="sans" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/ferment_list_duration_entry"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="center_vertical|bottom"
        android:layout_row="0"
        android:layout_weight="1"
        android:contentDescription="@string/ferm_days_contentDesc"
        android:hint="@string/fermentPhaseDuration_hint"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="sans" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/ferment_list_temp_entry"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_column="1"
        android:layout_gravity="center_vertical|bottom"
        android:layout_row="0"
        android:layout_weight="1"
        android:contentDescription="@string/ferm_temp_contentDesc"
        android:hint="@string/fermentPhaseTemp_hint"
        android:inputType="number"
        android:singleLine="true"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="sans" />

</LinearLayout>