<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".mobile.fragments.CreateRecipeFramentMain">

        <TextView
            android:id="@+id/hopPhaseViewLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/hop_phase_title_contentDesc"
            android:paddingBottom="@dimen/common_small_margin"
            android:paddingTop="@dimen/common_tiny_margin"
            android:text="@string/hop_phase_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_tiny_margin"
            android:layout_marginTop="@dimen/common_tiny_margin"
            android:alignmentMode="alignBounds"
            android:columnCount="2"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingEnd="@dimen/common_small_margin"
            android:paddingStart="@dimen/common_small_margin"
            android:rowCount="1"
            android:theme="@style/AppTheme"
            android:useDefaultMargins="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/viewHopPhaseDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:layout_row="0"
                android:focusable="true"
                android:text="@string/hop_duration_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/viewHopPhaseDurationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginBottom="@dimen/common_tiny_margin"
                android:layout_marginEnd="180dp"
                android:layout_row="0"
                android:contentDescription="@string/hop_phase_time_contentDesc"
                android:enabled="true"
                android:focusable="true"
                android:gravity="end"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/no_entry_hint"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold|italic"
                android:typeface="normal" />

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/accent_material_light"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/common_small_margin">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/hop_table_variety_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/hop_table_type_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/table_quantity_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/hop_table_when_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ListView
            android:id="@+id/viewHopList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/accent_material_light"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:contentDescription="@string/list_hop_contentDesc"
            android:divider="@color/colorPrimaryDark"
            android:dividerHeight="@dimen/separator_height"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/fermentation_phase_title_contentDesc"
            android:paddingBottom="@dimen/common_small_margin"
            android:paddingTop="@dimen/common_small_margin"
            android:text="@string/view_recipe_fermentation_title"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/accent_material_light"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/common_small_margin">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/ferment_table_name_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/table_duration_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/table_temp_column"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ListView
            android:id="@+id/viewFermentList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/accent_material_light"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:contentDescription="@string/ferm_list_contentDesc"
            android:divider="@color/colorPrimaryDark"
            android:dividerHeight="@dimen/separator_height"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>